# gfetch-site

./: .gitignore  JUSTFILE  README.md  db.sqlite3  main.py  pyproject.toml
gsite/: admin.py  apps.py  models.py  urls.py  views.py
gsite/migrations/: 0001_initial.py  0002_alter_blogpost_options_alter_blogpost_body.py  0003_alter_blogpost_body.py
gsite/templates/gsite/: _blog.html  _cli.html  _home.html  _navbar.html  _web.html  index.html  privacy.html  terms.html
project/: settings.py  urls.py
theme/templates/: base.html
