[project]
name = "gfetch-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-tailwind>=4.2.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "honcho>=2.0.0", # Honcho is a tailwind/browser-reload dependency but I had to install it manually
]
