[project]
name = "gfetch-site"
version = "0.1.0"
description = "The website for the gfetch project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.16",
    "django>=5.2.4",
    "django-markdownify>=0.9.5",
    "django-markdownx>=4.0.9",
    "django-storages>=1.14.6",
    "django-tailwind>=4.2.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "honcho>=2.0.0", # Honcho is a tailwind/browser-reload dependency but I had to install it manually
]
